# aikup

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
scripts/: npm-release.sh
src/: cli.rs  colors.rs  ctx.rs  lib.rs  main.rs  partial_config.rs  utils.rs
src/cmd/: clean.rs  current.rs  install.rs  list.rs  mod.rs
wix/: main.wxs
