[package]
name = "aikup"
version = "0.0.5"
description = "Manage multiple versions of aiken"
edition = "2021"
repository = "https://github.com/aiken-lang/aikup"
homepage = "https://aiken-lang.org"
license = "Apache-2.0"
authors = ["Lucas Rosa <x@rvcas.dev>"]

[package.metadata.wix]
upgrade-guid = "4FB9E215-B346-44A2-9F93-25CB0830F9E3"
path-guid = "B86EA861-05CE-4FB9-9AAB-E36A7F1EAA4B"
license = false
eula = false

[dependencies]
arc-swap = "1.7.1"
clap = { version = "4.5.4", features = ["derive"] }
color-print = "0.3.6"
console = "0.15.8"
dirs = "5.0.1"
flate2 = "1.0.28"
http-body-util = "0.1.1"
indoc = "2.0.5"
miette = { version = "7.2.0", features = ["fancy"] }
octocrab = "0.38.0"
once_cell = "1.19.0"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
tar = "0.4.40"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.13"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "aiken-lang/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@aiken-lang"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
install-path = "~/.aiken/bin/"
